--- a/src/main/Scala/com/datawarehouse/ch01.md
+++ b/src/main/Scala/com/datawarehouse/ch01.md
@@ -160,7 +160,15 @@ OLAP：
 4. 确认事实  确认指标，度量值
 
 
-### DWS层与DWT
+### DWS层与DWT (宽表层)
+dws汇总到天的数据
+dwt是  7，15， 30天的数据
+一一对应的
+
+1. 为了减少重复计算
+2. 
+
+
 ### ADS层
   
 
